  qInstallMessageHandler().

* QTextBoundaryFinder
  - [QTBUG-6498] The word start and word end boundaries detection is now
    unaware of surrounding white space characters.
  - SoftHyphen enum value has been added to specify a line break opportunity
    at a soft hyphen (SHY) character.
  - MandatoryBreak enum value has been added to specify a mandatory (aka "hard") line breaks.
  - StartWord/EndWord enum values has been logically replaced with StartOfItem/EndOfItem ones
    to mention they are not about the word boundaries only.

* Softkeys API was removed. The following functions and enums were removed:
  - QAction::setSoftKeyRole()
  - QAction::softKeyRole()
  - QAction::SoftKeyRole
  - Qt::WA_MergeSoftkeys
  - Qt::WA_MergeSoftkeysRecursively
  - Qt::WindowSoftkeysVisibleHint
  - Qt::WindowSoftkeysRespondHint

QtGui
-----
* Accessibility has been refactored. The hierachy of accessible objects is implemented via
  proper parent/child functions instead of using navigate which has been deprecated for this purpose.
  Table and cell interfaces have been added to qaccessible2.h

* Touch events and points have been extended to hold additional
  information like capability flags, point-specific flags, velocity,
  and raw positions.

* A new set of enabler classes have been added, most importantly QWindow, QScreen,
  QSurfaceFormat, and QOpenGLContext.

* Most of the useful QtOpenGL classes have been polished and moved into
  QtGui. See QOpenGLFramebufferObject, QOpenGLShaderProgram,
  QOpenGLFunctions, etc.

* QOpenGLPaintDevice has been added to be able to use QPainter to render into
  the currently bound context.

* Behavioral change in QImage::fill() on an image with format Format_RGB888:
  For consistency with RGB32 and other 32-bit formats, function now expects
  image data in RGB layout as opposed to BGR layout.

* Behavioral change in QImage and QPixmap load()/loadFromData() on a non-null image: