@@ -478,8 +478,9 @@ QtCore
   - SoftHyphen enum value has been added to specify a line break opportunity
     at a soft hyphen (SHY) character.
   - MandatoryBreak enum value has been added to specify a mandatory (aka "hard") line breaks.
-  - StartWord/EndWord enum values has been logically replaced with StartOfItem/EndOfItem ones
-    to mention they are not about the word boundaries only.
+  - Source-incompatible change: Since the behavior of boundaryReasons() method
+    has been changed a lot, StartWord/EndWord enum values were intentionally replaced
+    with StartOfItem/EndOfItem ones to force the affected code be revised.
 
 * Softkeys API was removed. The following functions and enums were removed:
   - QAction::setSoftKeyRole()
